Changes done in login page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 	Username:- <input type="text" name="username"/></br>
 	Password:- <input type="password" name="password"/></br>
 	<a href="homepage.html">
-	<button>Sign_in</button>
+	<button>Signin</button>
 	</a>
 </body>
 </html>
